[package]
name = "turnik4"
version = "0.1.0"
authors = ["Stanislav <ixentrum@gmail.com>"]
edition = "2018"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.20", features = ["macros", "sync", "rt-util", "fs", "rt-threaded", "blocking" ] }
reqwest = { version = "0.10.4", features = ["stream", "cookies", "json"] }
rusqlite = "0.23.1"
http = "0.2.1"
anyhow = {version="1.0.31", features=["std"]}
cloudflare-bypasser="0.2.0"
scraper="0.11.0"
kuchiki="0.8.0"
select="0.4.3"
html5ever="0.25.1"
url="2.1.1"
lazy_static="1.4.0"
regex="1.3.7"
futures-util = "0.3.5"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
chrono = { version = "0.4.11", features = ["serde"] }
bincode = "1.2.1"
warp = "0.2"
hyper = "0.13.5"
futures = "0.3.5"
[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"