[package]
name = "turnik4"
version = "0.1.0"
authors = ["Stanislav"]
edition = "2018"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static="*"
serde = { version = "*", features = ["derive", "rc"] }
serde_json = "*"
tokio = { version = "*", features = ["macros", "sync", "rt-util", "fs", "rt-threaded", "blocking" ] }
futures = "*"
futures-util = "*"
reqwest = { version = "*", features = ["stream", "cookies", "json"] }
chrono = { version = "*", features = ["serde"] }
url="*"
regex="*"
rusqlite = "*"
http = "*"
toml = "*"
anyhow = {version="*", features=["std"]}
cloudflare-bypasser="*"
scraper="*"
kuchiki="*"
select="*"
html5ever="*"
bincode = "*"
warp = "*"
hyper = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]